test/typecheck/errors/complex-arrays.boa
a1: array of set of int;
